--- a/app/assets/stylesheets/Feres_News_Theme.css
+++ b/app/assets/stylesheets/Feres_News_Theme.css
@@ -4,6 +4,9 @@ body{
 	font-family: sans-serif;
 	padding-top: 2%;
 }
+h1,h2,h3,h4,h5,h6,p{
+	color: #333;
+}
 .thin{ font-weight: 200 }
 /* Categories Styles .  .  .  .  .  .  .  .  .  .  .  . */
 .categories{
